@@ -1,3 +1,8 @@
+2001-03-15  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-static-cond): New macro; use if for defining
+	`find-coding-system'.
+
 2001-03-15  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* w3m.el (w3m-exec-process): Add `delete-process' to clean up
